feat: unify entry, Fontmin v1/v2 both support, smaller bundle, .ts rollup config
### Added
- Support for both Fontmin v1 and v2 (by CommonJS and ESM usage)

### Changed
- Unified single entry point (`dist/index.min.js`) for both CommonJS and ESM builds
- Rollup config migrated from `.mjs` to `.ts`
- Bundle size reduced by excluding unnecessary files from npm package

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
-.nyc_output/
 coverage/
 node_modules/
-output/
+.nyc_output/
+.vscode/
+.idea/
 
 .DS_Store
-.eslintcache
-coverage.lcov
-.pnpm-debug.log
-.idea
 .rollup.cache
-
-!/test/**/node_modules
+coverage.lcov
