chore: update keywords section in package.json

--- a/package.json
+++ b/package.json
@@ -62,8 +62,9 @@
     "package.json"
   ],
   "keywords": [
+    "node",
     "rollup",
-    "plugin",
+    "rollup-plugon",
     "mdi",
     "fontmin",
     "minify",
