chore: update keywords section in package.json

--- a/package.json
+++ b/package.json
@@ -64,9 +64,11 @@
   "keywords": [
     "node",
     "rollup",
-    "rollup-plugon",
+    "rollup-plugin",
+    "material-design-icons",
     "mdi",
     "fontmin",
+    "compress",
     "minify",
     "font",
     "icons"
