--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
-coverage/
-node_modules/
-.nyc_output/
-.vscode/
-.idea/
+node_modules
 
+*.log
 .DS_Store
-.rollup.cache
-coverage.lcov
+.eslintcache
+.idea
