--- a/package.json
+++ b/package.json
@@ -1,40 +1,55 @@
 {
   "name": "rollup-plugin-mdi-fontmin",
   "version": "1.1.2",
+  "packageManager": "pnpm@10.11.0",
+  "description": "Rollup plugin for subsetting Material Design Icons (MDI) font files.",
+  "type": "module",
+  "keywords": [
+    "rollup-plugin",
+    "material-design-icons",
+    "mdi",
+    "fontmin",
+    "compress",
+    "minify",
+    "subset",
+    "icons",
+    "font"
+  ],
   "license": "MIT",
-  "author": "re7r <re7r@proton.me>",
-  "description": "Rollup plugin for subsetting Material Design Icons (MDI) font files",
-  "repository": "https://github.com/re7r/rollup-plugin-mdi-fontmin",
-  "main": "dist/index.min.js",
-  "module": "dist/index.min.js",
-  "types": "types/index.d.ts",
-  "exports": {
-    "require": "./dist/index.min.js",
-    "import": "./dist/index.min.js",
-    "types": "./types/index.d.ts"
+  "homepage": "https://github.com/re7r/rollup-plugin-mdi-fontmin#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/re7r/rollup-plugin-mdi-fontmin"
   },
-  "scripts": {
-    "build": "rollup -c --configPlugin @rollup/plugin-typescript",
-    "ci:test": "yarn test --verbose && yarn test:ts",
-    "ci:coverage": "nyc yarn test && nyc report --reporter=text-lcov > coverage.lcov",
-    "ci:release": "release-it",
-    "prebuild": "del-cli dist",
-    "prepare": "if [ ! -d 'dist' ]; then yarn build; fi",
-    "prerelease": "yarn build",
-    "pretest": "yarn build",
-    "test": "ava",
-    "test:ts": "tsc types/index.d.ts test/types.ts --noEmit"
+  "author": "Re7r <re7r@proton.me>",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": "./dist/index.js",
+    "./package.json": "./package.json"
   },
   "publishConfig": {
     "access": "public"
   },
-  "engines": {
-    "node": ">=14.16.1"
+  "scripts": {
+    "lint": "eslint --cache .",
+    "lint:fix": "pnpm run lint --fix",
+    "build": "tsdown",
+    "dev": "tsdown --watch",
+    "test": "vitest run",
+    "typecheck": "tsc --noEmit",
+    "format": "prettier --cache --write .",
+    "release": "release-it",
+    "prepublishOnly": "pnpm run build"
   },
   "peerDependencies": {
+    "@mdi/font": "^1.0.0||^2.0.0||^3.0.0||^4.0.0||^5.0.0||^6.0.0||^7.0.0",
     "fontmin": "^1.0.0||^2.0.0",
-    "rollup": "^1.0.0||^2.0.0||^3.0.0||^4.0.0",
-    "@mdi/font": "^1.0.0||^2.0.0||^3.0.0||^4.0.0||^5.0.0||^6.0.0||^7.0.0"
+    "rollup": "^1.0.0||^2.0.0||^3.0.0||^4.0.0"
   },
   "peerDependenciesMeta": {
     "rollup": {
@@ -45,32 +60,19 @@
     "@mdi/font": "^7.4.47",
     "@release-it/bumper": "^7.0.5",
     "@release-it/conventional-changelog": "^10.0.1",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^12.1.2",
-    "@types/node": "^22.15.14",
-    "ava": "^6.3.0",
+    "@sxzz/eslint-config": "^7.0.1",
+    "@sxzz/prettier-config": "^2.2.1",
+    "@types/node": "^22.15.21",
+    "eslint": "^9.27.0",
+    "eslint-plugin-jsdoc": "^50.6.17",
     "fontmin": "^2.0.0",
+    "prettier": "^3.5.3",
     "release-it": "^19.0.2",
-    "rollup": "^4.40.2",
-    "ts-node": "^10.9.2",
-    "tslib": "^2.8.1",
-    "typescript": "^5.8.3"
+    "rollup": "^4.41.1",
+    "tsdown": "^0.12.3",
+    "vitest": "^3.1.4"
   },
-  "files": [
-    "dist/index.min.js",
-    "types/index.d.ts",
-    "package.json"
-  ],
-  "keywords": [
-    "node",
-    "rollup",
-    "rollup-plugin",
-    "material-design-icons",
-    "mdi",
-    "fontmin",
-    "compress",
-    "minify",
-    "font",
-    "icons"
-  ]
+  "engines": {
+    "node": ">=v18"
+  }
 }
